Eliminar esquema OpenAPI no referenciado
