# microcredito-p1/docs/api/openapi.yaml
@@ -558,10 +558,6 @@ components:
       format: uuid
       pattern: ^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$
       description: Clave UUID para evitar registrar dos veces el mismo pago
-    ClienteId:
-      type: string
-      pattern: ^CLI-\d{3,8}$
-      description: Identificador del cliente
     RegistrarClienteRequest:
       type: object
       properties:
